[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GameTemplate/Tests/GlobalTimerTest.gd" type="Script" id=1]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_16.tres" type="DynamicFont" id=2]

[node name="GlobalTimerTest" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="AddAutostartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -78.0
margin_right = 15.0
margin_bottom = -38.0
custom_fonts/font = ExtResource( 2 )
text = "add autostart"

[node name="AddButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -78.0
margin_right = 99.0
margin_bottom = -38.0
custom_fonts/font = ExtResource( 2 )
text = "add"

[node name="AddOneshotButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 41.0
margin_right = 128.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
text = "add oneshot"

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = 41.0
margin_right = -73.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
text = "start"

[node name="StopButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -28.0
margin_right = 129.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "stop"

[node name="DeleteButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -13.0
margin_right = -60.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "delete"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer"]
margin_left = 113.0
margin_top = 75.0
margin_right = 213.0
margin_bottom = 115.0
text = "Test me! 
Tic Toc"
